[build-system]
requires = [
    "setuptools==82.0.1",
    "wheel==0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "autoblogs"
dynamic = ["version"]
description = "AI-Assisted Content Generation Toolkit"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Debmalya Pramanik"}
]
keywords = [
    "ai",
    "autoblogs",
    "content-generation",
    "llm",
    "blog",
    "seo",
    "streamlit",
    "cli-tool",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "streamlit>=1.55"
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.85"]
openai   = ["openai>=2.28"]
llm      = ["anthropic>=0.85", "openai>=2.28"]
dev      = ["anthropic>=0.85", "openai>=2.28"]

[project.urls]
"GitHub Homepage" = "https://github.com/PyUtility/autoblogs"
"Bug Tracker"     = "https://github.com/PyUtility/autoblogs/issues"
"Code Changelog"  = "https://github.com/PyUtility/autoblogs/blob/master/CHANGELOG.md"

[project.scripts]
autoblogs-ui  = "autoblogs.ui.main:launch"
autoblogs-cli = "autoblogs.cli.main:launch"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "autoblogs.__version__"}

[tool.setuptools.package-data]
autoblogs = ["prompts/*"]
